--- a/.classpath
+++ b/.classpath
@@ -7,6 +7,10 @@
 			<attribute name="javadoc_location" value="https://hub.spigotmc.org/javadocs/bukkit/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="jars/TinyProtocolAPI.jar"/>
+	<classpathentry kind="lib" path="jars/ProtocolLib.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://ci.shadowvolt.com/job/ProtocolLib/javadoc/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
