--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ notifications:
     - simon.artner@gmail.com
     on_success: change
     on_failure: always
+before_deploy:
+  - ls
+  - tree
 deploy:
   provider: releases
   api_key:
