Added MySQLConnector, added remote path for TabAPI.

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,10 @@
 			<id>Plugin Metrics</id>
 			<url>http://repo.mcstats.org/content/repositories/public</url>
 		</repository>
+		<repository>
+			<id>TabAPI</id>
+			<url>http://45.55.135.116:8081/artifactory/libs-snapshot-local/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -91,11 +95,15 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.tabapi</groupId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.36</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mcsg.double0negative</groupId>
 			<artifactId>tabapi</artifactId>
-			<version>0.9.2</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/lib/TabAPI_1_8_R3-8.jar</systemPath>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 </project>
