Changed mcStats repository to KWStudios Server.

--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,8 @@
 	<url>http://mc.kwstudios.org/</url>
 	<repositories>
 		<repository>
-			<id>spigot-repo</id>
+			<id>kwstudios-repo</id>
 			<url>http://45.55.135.116:8081/artifactory/libs-snapshot/</url>
-		</repository>
-		<repository>
-			<id>Plugin Metrics</id>
-			<url>http://repo.mcstats.org/content/repositories/public</url>
 		</repository>
 	</repositories>
 	<dependencies>
