--- a/pom.xml
+++ b/pom.xml
@@ -34,13 +34,13 @@
 	<repositories>
 		<repository>
 			<id>spigot-repo</id>
-			<url>http://45.55.135.116:8081/artifactory/libs-snapshot/</url>
+			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
-			<groupId>org.bukkit</groupId>
-			<artifactId>craftbukkit</artifactId>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
 			<version>1.8.8-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
