--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
 			<id>spigot-repo</id>
 			<url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
 		</repository>
+		<repository>
+			<id>craftbukkit-repo</id>
+			<url>http://maven.elmakers.com/repository/</url>
+		</repository>
 	</repositories>
 	<dependencies>
 		<dependency>
@@ -58,16 +62,10 @@
 			<version>5.1.36</version>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpcore</artifactId>
-			<version>4.0-beta3</version>
+			<groupId>org.bukkit</groupId>
+			<artifactId>craftbukkit</artifactId>
+			<version>1.8.8-R0.1-SNAPSHOT</version>
 		</dependency>
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5</version>
-		</dependency>
-
 
 	</dependencies>
 </project>
