--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<artifactId>craftbukkit</artifactId>
 			<version>1.8.8-R0.1-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+    		<groupId>org.filoghosts</groupId>
+    		<artifactId>HolographicDisplaysAPI</artifactId>
+    		<version>2.1.7</version>
+    		<scope>system</scope>
+    		<systemPath>${project.basedir}/lib/HolographicDisplaysAPI_v2.1.7.jar</systemPath>
+		</dependency>
 	</dependencies>
 </project>
